# game

./: .editorconfig  CMakeLists.txt  README.md  conanfile.txt
cmake/: conan.cmake  global-compile-options.cmake  locations.cmake
cmake/resources/: conan-profile
scripts/: build.sh  clear.sh  configure-conan-remotes.sh  configure.sh  run.sh
source/game/: CMakeLists.txt  main.cpp
source/game/base/: CMakeLists.txt  find-index-of-type-in-parameter-pack.hpp  iterable-to-optional.cpp  iterable-to-optional.hpp  non-copyable.hpp  parameter-pack-has-type.hpp  parameter-pack-type-unicity.hpp
source/game/data/: CMakeLists.txt  paths.cpp  paths.hpp  textures.cpp  textures.hpp
source/game/ecs/: CMakeLists.txt  component.hpp  entity.cpp  entity.hpp  rotate-around.cpp  rotate-around.hpp  scene.cpp  scene.hpp  spin.cpp  spin.hpp  system.hpp  transform.cpp  transform.hpp
source/game/levels/: CMakeLists.txt  level-generator.cpp  level-generator.hpp  level-section.cpp  level-section.hpp  level.cpp  level.hpp  relief-generator.cpp  relief-generator.hpp  sections-generator.cpp  sections-generator.hpp  tile.cpp  tile.hpp
source/game/math/: CMakeLists.txt  constants.hpp  dimensions.hpp  direction.cpp  direction.hpp  random.hpp  random.implementation.hpp  sequence-generator.hpp
source/game/rendering/: CMakeLists.txt  camera.cpp  camera.hpp  colors.cpp  colors.hpp  floor-tile.hpp  fragment.frag  level-coloration.cpp  level-coloration.hpp  managed-opengl-resource.cpp  managed-opengl-resource.hpp  mesh.cpp  mesh.hpp  render-floor.cpp  render-floor.hpp  render-level.hpp  render-object.cpp  render-object.hpp  rendering-assets-vault.cpp  rendering-assets-vault.hpp  shader-binding.cpp  shader-binding.hpp  unit-square.hpp  vertex.vert
source/game/rendering/shaders/: forced-vertex-color-fragment-shader.cpp  forced-vertex-color-fragment-shader.hpp  standard-textured-surface.cpp  standard-textured-surface.hpp
source/game/rendering/shaders/glsl/: forced-vertex-color-fragment-shader.frag  forced-vertex-color-fragment-shader.vert  standard-textured-surface.frag  standard-textured-surface.vert
source/game/scenes/: CMakeLists.txt  battlefield-scene.cpp  battlefield-scene.hpp
